<resources>
    <string name="app_name">Graph Calculator</string>
    <string name="action_settings">Impostazioni</string>
    <string name="cos" translatable="false">cos(x)</string>
    <string name="funzione_coseno">Funzione Coseno</string>
    <string name="sin" translatable="false">sin(x)</string>
    <string name="funzione_seno">Funzione Seno</string>
    <string name="acos" translatable="false">acos(x)</string>
    <string name="asin" translatable="false">asin(x)</string>
    <string name="atan" translatable="false">atan(x)</string>
    <string name="atan2" translatable="false">atan2(x)</string>
    <string name="log" translatable="false">log(x)</string>
    <string name="tan" translatable="false">tan(x)</string>

    <string name="riempiCampi">Riempire tutti i campi</string>
    <string name="controllaParentesi">Inserire un numero corretto di parentesi!</string>
    <string name="AminB">L estremo B deve essere maggiore di almeno 0.10 rispetto all\'estremo A!</string>
    <string name="estremi">Inserire valori corretti per gli estremi</string>

    <string name="errore">Errore</string>
    <string name="syntaxError">Errore di sintassi nella funzione</string>
    <string name="domainError">Errore nel dominio della funzione</string>
    <string name="troppoGrande">Il valore è troppo grande</string>
    <string name="grafico">Grafico</string>

    <string name="chooseApp">Scegli una applicazione…</string>
    <string name="img_in_gallery">Immagine salvata correttamente nella galleria</string>
    <string name="chooseFun">Scegli una funzione…</string>
    <string name="help">Serve aiuto?</string>

    <string name="wait">Aspetta…</string>
    <string name="calc">Sto calcolando…</string>

    <string name="A_extreme">Estremo A</string>
    <string name="B_extreme">Estremo B</string>
    <string name="precisione">Modifica precisione</string>

    <string name="help_text">\tLA FUNZIONE\n</string>

    <string name="help_text_2">La variabile della funzione da inserire deve essere seguita da trattino basso, es: x_\n\n
        Si consiglia di racchiudere ogni variabile presente all interno di parentesi tonde, es: ((x_)^3)\n\n
        Il numero di Nepero "e" ha la seguente sintassi: e_\n\n
        Le funzioni arcoseno, arcocoseno e arcotangente hanno rispettivamente la seguente sintassi:\n\n
        \t\t a_sin(), a_cos(), a_tan().\n\n
        Le operazioni di somma e sottrazione tra funzioni non devono essere adiacenti a parentesi non utilizzate
        nella definizione delle funzioni stesse.\n\n
        \t\tEsempio:\n\n
        \t\tSBAGLIATO: (sin(x_))+(x_)\n\n
        \t\tCORRETTO:  (sin(x_)+x_)\n\n
        Si possono inserire due funzioni e confrontare i loro andamenti all interno di uno stesso intervallo.\n\n
        È possibile accedere a funzioni già esistenti con un doppio tocco sul campo della funzione.\n</string>

    <string name="help_text_3">\tGLI ESTREMI\n</string>

    <string name="help_text_4">È obbligatorio inserire gli estremi.\n\n
        L estremo A e l estremo B devono essere numeri razionali.\n\n 
        L estremo A deve essere strettamente minore dell estremo B.\n</string>

    <string name="help_text_6">\tIL GRAFICO\n</string>

    <string name="help_text_7">Toccare il pulsante in basso per ottenere il grafico.\n\n
    Una volta mostrato il grafico:\n\n
    \t-tocca in un punto del grafico per ottenere la coppia di valori (x, y),\n\n
    \t-fai un tocco prolungato per ottenere i punti speciali della funzione.\n</string>

    <string name="max">Massimo</string>
    <string name="min">Minimo</string>
    <string name="noExternalPermission">Non hai concesso i permessi per lo storage esterno!</string>
    <string name="okExternalPermission">Hai concesso i permessi per lo storage esterno!</string>
    <string name="graphInfo">Informazioni sul grafico</string>
    <string name="f_x">f(x_)</string>
    <string name="needHelp">Serve un aiuto?</string>
    <string name="function">Funzione</string>

    <string name="closeApp">Chiusura applicazione</string>
    <string name="exitFromApp">Sei sicuro di voler uscire dall applicazione?</string>
    <string name="confirmExit">Sì, esci!</string>
    <string name="noExit">No</string>
    <string name="localCode">it</string>
    <string name="e" translatable="false">e^x</string>
    <string name="abs" translatable="false">|x|</string>

    <string name="credits" translatable="false">Powerd by iLoger</string>  
</resources>
